--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
+    "cheeseburger-menu": "^0.0.13",
+    "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-hamburger-menu": "^1.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
