--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
     "cheeseburger-menu": "^0.0.13",
+    "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-hamburger-menu": "^1.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "reactstrap": "^8.1.1",
     "youtube-api-search": "^0.0.5"
   },
   "scripts": {
